# byr-pet

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust_ci.yml
docs/: README.md
frontend/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  vite.config.ts.timestamp-1716572533944-616a6b9bb6576.mjs
frontend/src/: index.tsx  style.css
frontend/src/components/: Login.tsx
pkgs/storage/: Cargo.toml
pkgs/storage/src/: lib.rs
scripts/: flash.sh  qemu.sh
src/: main.rs
src/net/: bupt.rs  mod.rs  provisioning.rs
src/nvs/: mod.rs
