workspace = { members = ["pkgs/storage"] }
[package]
name = "byr-pet"
version = "0.1.0"
authors = ["YouXam <youxam@outlook.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
storage = { path = "pkgs/storage" }
serde = { version = "1.0.201", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.83"

[build-dependencies]
embuild = "0.31.3"
