[package]
name = "byr-pet"
version = "0.1.0"
authors = ["YouXam <youxam@outlook.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77.0"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1

[profile.dev]
opt-level = "s"
debug = false
lto = true
strip = true

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
random_mac = ["rand"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
serde = { version = "1.0.201", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.83"
heapless = "0.8.0"
esp-idf-hal = "0.43.1"
twox-hash = "1.6.3"
embedded-svc = "0.27.1"
urlencoding = "2.1.3"
include_dir = "0.7.3"
serde_json = "1.0.117"
rand = { version = "0.8.5", optional = true }
lazy_static = "1.4.0"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/YouXam/esp-idf-svc.git", branch = "fix-http-error-handling" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc.git" }

[build-dependencies]
embuild = "0.31.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook"]
